node1-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node1-clusterip-service
  namespace: virtualmachines
spec:
  ports:
  - port: 80 
    name: web
    protocol: TCP
  - port: 8080
    name: app
    protocol: TCP
  - port: 22
    name: ssh
    protocol: TCP
  selector:
    todoservice: node1
  type: ClusterIP
