node1-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node1-loadbalancer-service
  namespace: virtualmachines
  annotations:
    MetalLB.universe.tf/address-pool: apex-ip-addresspool-1
spec:
  selector:
    todoservice: node1
  ports:
    - port: 22
      name: ssh
      protocol: TCP
    - port: 8080
      name: todo-app
      protocol: TCP
  type: LoadBalancer
