node2-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node2-clusterip-service
  namespace: virtualmachines
spec:
  ports:
  - port: 27017
    name: mariadb
    protocol: TCP
  - port: 22
    name: ssh
    protocol: TCP
  selector:
    todoservice: node2
  type: ClusterIP
