node2-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node2-clusterip-service
  namespace: virtualmachines
  annotations:
    MetalLB.universe.tf/address-pool: apex-ip-addresspool-1
spec:
  ports:
  - port: 27017
    name: mongodb
    protocol: TCP
  - port: 22
    name: ssh
    protocol: TCP
  selector:
    todoservice: node2
  type: LoadBalancer
